--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,20 @@
 /*this file was created in the terminal*/
+p {
+	font-family: "Orbitron";
+	text-transform: uppercase;
+	margin-left: 1.66%;
+	margin-bottom: 0;
+	font-size: 23px;
+	font-weight: 900;
+}
+
 img {
 	width: 30%;
 	float: left;
 	margin: 1.66%;
+}
+
+hr {
+	margin-left: 1.66%;
+	width: 33.3%;
 }
